# agentic-trader

./: .aiignore  .coderabbit.yaml  .env.example  .env.vault  .gitignore  AGENTS.instructions.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TradingBot.spec  agentic-trader.spec  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  skills-lock.json  sonar-project.properties  vitest.config.mts
.ai/: architecture.instructions.md  architecture.md  current-state.instructions.md  current-state.md  debugging.instructions.md  debugging.md  decisions-runtime-tooling.instructions.md  decisions.instructions.md  decisions.md  memory.instructions.md  memory.md  profile.instructions.md  profile.md  rules.instructions.md  rules.md  tasks.instructions.md  tasks.md
.ai/agents/: README.instructions.md  README.md  browser-qa.agent.md  browser-qa.md  code-quality.agent.md  code-quality.md  data.agent.md  data.md  finance-ops.agent.md  finance-ops.md  implementer.agent.md  implementer.md  market-strategist.agent.md  market-strategist.md  operator-ux.agent.md  operator-ux.md  performance-engineer.agent.md  performance-engineer.md  planner.agent.md  planner.md  product-docs.agent.md  product-docs.md  qa.agent.md  qa.md  release-manager.agent.md  release-manager.md  repo-architect.agent.md  repo-architect.md  researcher.agent.md  researcher.md  reviewer.agent.md  reviewer.md  security-auditor.agent.md  security-auditor.md  test-long-runner.agent.md  test-long-runner.md
.ai/helpers/: README.instructions.md  README.md
.ai/playbooks/: README.instructions.md  README.md  browser-qa.instructions.md  browser-qa.md  code-review.instructions.md  code-review.md  finance-evidence-reconciliation.instructions.md  finance-evidence-reconciliation.md  memory-retrieval.instructions.md  memory-retrieval.md  news-intelligence.instructions.md  news-intelligence.md  pr-enhance.instructions.md  pr-enhance.md  ruflo-advisory-checks.instructions.md  ruflo-advisory-checks.md  security-scan.instructions.md  security-scan.md  setup-validation.instructions.md  setup-validation.md  strategy-research-and-sweeps.instructions.md  strategy-research-and-sweeps.md
.ai/prompts/: codex-task.md  codex-task.prompt.md  planner-task.md  planner-task.prompt.md  review-task.md  review-task.prompt.md
.ai/qa/: pre-push-checklist.instructions.md  pre-push-checklist.md  qa-agent.md  qa-checklist.instructions.md  qa-checklist.md  qa-runbook.instructions.md  qa-runbook.md  qa-scenarios.instructions.md  qa-scenarios.md  qa-smoke-script.instructions.md  qa-smoke-script.md  visual-security-scenarios.instructions.md
.ai/security/: threat-model.instructions.md  threat-model.md
.ai/skills/: README.instructions.md  README.md  market-news-research.instructions.md  market-news-research.md  ruflo-codex.instructions.md  ruflo-codex.md
.ai/strategies/: README.instructions.md  README.md  v1-strategy-catalog.instructions.md  v1-strategy-catalog.md
.ai/workflows/: README.instructions.md  README.md  continuous-research-loop.instructions.md  continuous-research-loop.md  external-tooling-policy.instructions.md  external-tooling-policy.md  (+14 more)
.claude/: settings.json
.claude-flow/: .gitignore  CAPABILITIES.md  config.yaml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
agentic_trader/: __init__.py  cli.py  config.py  diagnostics.py  json_utils.py  observer_api.py  payloads.py  runtime_feed.py  runtime_status.py  schemas.py  security.py  time_utils.py  tui.py  tui_monitor.py  tui_monitor_sections.py  tui_operator.py  tui_preferences.py  tui_runtime.py  tui_status.py  ui_text.py  ui_text.pyi
dev/: code-map.md
dev-docs/: code-map.md
docs/: .env.example  .prettierignore  AGENTS.instructions.md  AGENTS.md  README.md  components.json  eslint.config.mjs  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
scripts/: app-doctor.mjs  app-services.mjs  app-setup.mjs  app-uninstall.mjs  app-up.mjs  app-update.mjs  bootstrap-system-tools.sh  check-python.sh  check-research-crewai.sh  check-research-flow.sh  check_pyright_baseline.py  clean-workspace.sh  install-python.sh  launch-main.sh  run-camofox-pnpm.sh  run-research-crewai.sh  run-research-flow.sh  setup-node-workspace.sh  start-camofox-browser.sh
sidecars/research-crewai/: README.md  pyproject.toml
sidecars/research-crewai/src/research_crewai/: __init__.py  contracts.py  main.py
sidecars/research_flow/: .env.example  .gitignore  AGENTS.crews.md  AGENTS.flows.md  AGENTS.md  AGENTS.tools-deployment.md  README.md  pyproject.toml  pyrightconfig.json
sidecars/research_flow/src/research_flow/: contracts.py  main.py
tests/: conftest.py  test_agent_context.py  test_alpaca_risk.py  test_app_callbacks.py  test_app_dashboard.py  test_app_lifecycle.py  test_backtest.py  test_broker_adapter.py  test_calibration.py  test_camofox_service.py  test_cli_json.py  test_cli_locale.py  test_cli_refactored.py  test_cli_tui_dependencies.py  test_config.py  test_consensus.py  test_crewai_setup.py  test_data_providers.py  test_execution_layer.py  test_features.py  test_finance_ideas.py  test_finance_rendering.py  test_financial_agents.py  test_financial_features.py  test_fundamental_helpers.py  test_guard.py  test_intent.py  test_json_utils.py  test_llm_client.py  test_llm_providers.py  test_manager.py  test_market_data.py  test_memory_policy.py  test_memory_retrieval.py  test_model_service.py  test_modularity_i18n_audit.py  test_multi_timeframe.py  test_news_intelligence.py  test_observer_api.py  test_operator_chat.py  (+38 more)
tools/: README.md
tui/: DashboardView.mjs  copy.mjs  copy.test.mjs  index.mjs  index.test.mjs  line-formatters.mjs  package-lock.json  package.json  pages.mjs  pages.test.mjs  review-lines.mjs  review-lines.test.mjs  runtime-actions.mjs
webgui/: .env.example  .prettierignore  .prettierrc  AGENTS.instructions.md  AGENTS.md  README.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+739 files in other folders)
