[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agentic-trader"
version = "0.1.0"
description = "A guardrailed multi-agent paper trading system built around local LLMs."
authors = [
    {name = "Oğuzcan Toptaş",email = "oguzcantoptas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0,<3.15"
dependencies = [
  "duckdb>=1.2.2",
  "httpx>=0.28.1",
  "pandas>=2.2.3",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.1",
  "rich>=14.0.0",
  "typer>=0.15.2",
  "yfinance>=0.2.58",
  "alpaca-py (>=0.43.2,<0.44.0)",
  "massive (>=2.5.0,<3.0.0)",
]

[project.optional-dependencies]
dev = [
  "pexpect>=4.9.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pyright>=1.1.408",
  "ruff>=0.11.2",
]

[project.scripts]
agentic-trader = "agentic_trader.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  "build",
  "dist",
  "runtime",
  ".ai/qa/artifacts",
  "docs",
  "webgui",
  "tui/node_modules",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
commit_message = "chore(release): v{version}"
build_command = "poetry build"
dist_path = "dist/"
upload_to_vcs_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "[Vv][0-9]+"
prerelease = true
prerelease_token = "next"

[tool.semantic_release.branches.beta]
match = "^(?!main$|[Vv][0-9]+$).+"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "build", "ci", "chore"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[dependency-groups]
dev = [
    "pyinstaller (>=6.20.0,<7.0.0)",
    "pysonar (>=1.4.0.4676,<2.0.0)",
    "python-semantic-release (>=10.0.0,<11.0.0)"
]
