[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.28.0,<2.0.0"]

[project]
authors = [
  {name = "Oğuzcan Toptaş", email = "oguzcantoptas@gmail.com"},
]
dependencies = [
  "duckdb>=1.5.3",
  "httpx>=0.28.1",
  "pandas>=2.2.3",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.1",
  "rich>=14.0.0",
  "typer>=0.15.2",
  "yfinance>=0.2.58",
  "alpaca-py>=0.43.2,<0.44.0",
  "massive>=2.5.0,<3.0.0",
  "firecrawl-py>=4.28.0",
  "ollama>=0.6.2",
  "yt-dlp>=2026.3.17",
  "aiofiles>=25.1.0",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.13.5",
  "aiosignal>=1.4.0",
  "aiosqlite>=0.22.1",
  "annotated-doc>=0.0.4",
  "annotated-types>=0.7.0",
  "anyio>=4.13.0",
  "appdirs>=1.4.4",
  "attrs>=26.1.0",
  "backoff>=2.2.1",
  "bcrypt>=5.0.0",
  "beautifulsoup4>=4.14.3",
  "certifi>=2026.4.22",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.7",
  "chromadb>=1.5.9",
  "click>=8.1.8",
  "crewai>=0.193.2",
  "crewai-cli>=1.14.6",
  "crewai-core>=1.14.6",
  "crewai-tools>=0.76.0",
  "cryptography>=48.0.0",
  "defusedxml>=0.7.1",
  "deprecation>=2.1.0",
  "distro>=1.9.0",
  "docstring-parser>=0.18.0",
  "durationpy>=0.10",
  "et-xmlfile>=2.0.0",
  "filelock>=3.29.1",
  "flatbuffers>=25.12.19",
  "frozenlist>=1.8.0",
  "fsspec>=2026.4.0",
  "googleapis-common-protos>=1.75.0",
  "grpcio>=1.81.0",
  "h11>=0.16.0",
  "hf-xet>=1.5.0",
  "httpcore>=1.0.9",
  "httptools>=0.8.0",
  "httpx-sse>=0.4.3",
  "huggingface-hub>=1.16.1",
  "idna>=3.15",
  "importlib-metadata>=8.7.1",
  "importlib-resources>=6.5.2",
  "instructor>=1.15.1",
  "jinja2>=3.1.6",
  "jiter>=0.13.0",
  "json-repair>=0.25.2",
  "json5>=0.14.0",
  "jsonref>=1.1.0",
  "jsonschema>=4.26.0",
  "jsonschema-specifications>=2025.9.1",
  "kubernetes>=36.0.2",
  "lance-namespace>=0.8.0",
  "lance-namespace-urllib3-client>=0.8.0",
  "lancedb>=0.33.0",
  "linkify-it-py>=2.1.0",
  "lxml>=6.1.1",
  "markdown-it-py>=4.1.0",
  "markupsafe>=3.0.3",
  "mcp>=1.27.2",
  "mdit-py-plugins>=0.6.1",
  "mdurl>=0.1.2",
  "mmh3>=5.2.1",
  "multidict>=6.7.1",
  "numpy>=2.4.4",
  "oauthlib>=3.3.1",
  "onnxruntime>=1.22.0",
  "openai>=2.40.0",
  "openpyxl>=3.1.5",
  "opentelemetry-api>=1.34.1",
  "opentelemetry-exporter-otlp-proto-common>=1.34.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.34.1",
  "opentelemetry-exporter-otlp-proto-http>=1.34.1",
  "opentelemetry-proto>=1.34.1",
  "opentelemetry-sdk>=1.34.1",
  "opentelemetry-semantic-conventions>=0.55b1",
  "orjson>=3.11.9",
  "overrides>=7.7.0",
  "packaging>=26.2",
  "pdfminer-six>=20251230",
  "pdfplumber>=0.11.9",
  "pillow>=12.2.0",
  "platformdirs>=4.9.6",
  "portalocker>=2.7.0",
  "posthog>=7.17.0",
  "propcache>=0.4.1",
  "protobuf>=5.29.6",
  "pyarrow>=24.0.0",
  "pybase64>=1.4.3",
  "pycparser>=3.0",
  "pydantic-core>=2.41.5",
  "pygments>=2.20.0",
  "pyjwt>=2.13.0",
  "pymupdf>=1.27.2.3",
  "pypdfium2>=5.9.0",
  "pypika>=0.51.1",
  "pyproject-hooks>=1.2.0",
  "python-dateutil>=2.9.0.post0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.30",
  "pytube>=15.0.0",
  "pyyaml>=6.0.3",
  "referencing>=0.37.0",
  "regex>=2026.5.9",
  "requests>=2.33.1",
  "requests-oauthlib>=2.0.0",
  "rpds-py>=2026.5.1",
  "shellingham>=1.5.4",
  "six>=1.17.0",
  "sniffio>=1.3.1",
  "soupsieve>=2.8.3",
  "sse-starlette>=3.4.4",
  "starlette>=1.2.1",
  "tenacity>=9.1.4",
  "textual>=8.2.7",
  "tiktoken>=0.13.0",
  "tokenizers>=0.23.1",
  "tomli>=2.0.2",
  "tomli-w>=1.1.0",
  "tqdm>=4.67.3",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "uc-micro-py>=2.0.0",
  "urllib3>=2.7.0",
  "uv>=0.11.18",
  "uvicorn>=0.49.0",
  "uvloop>=0.22.1",
  "watchfiles>=1.2.0",
  "websocket-client>=1.9.0",
  "websockets>=16.0",
  "yarl>=1.23.0",
  "youtube-transcript-api>=1.2.4",
  "zipp>=4.1.0",
  "asttokens>=3.0.1",
  "blinker>=1.9.0",
  "coloredlogs>=15.0.1",
  "curl-cffi>=0.15.0",
  "decorator>=5.3.1",
  "docker>=7.1.0",
  "executing>=2.2.1",
  "frozendict>=2.4.7",
  "humanfriendly>=10.0",
  "ipython>=9.14.0",
  "ipython-pygments-lexers>=1.1.1",
  "jedi>=0.20.0",
  "jsonpickle>=4.1.2",
  "litellm>=1.74.9",
  "matplotlib-inline>=0.2.2",
  "mpmath>=1.3.0",
  "msgpack>=1.1.2",
  "multitasking>=0.0.13",
  "nest-asyncio>=1.6.0",
  "networkx>=3.6.1",
  "parso>=0.8.7",
  "peewee>=4.0.5",
  "pexpect>=4.9.0",
  "prompt-toolkit>=3.0.52",
  "psutil>=7.2.2",
  "ptyprocess>=0.7.0",
  "pure-eval>=0.2.3",
  "pypdf>=6.12.2",
  "pytz>=2026.2",
  "pyvis>=0.3.2",
  "sseclient-py>=1.9.0",
  "stack-data>=0.6.3",
  "stagehand>=3.21.0",
  "sympy>=1.14.0",
  "traitlets>=5.15.1",
  "wcwidth>=0.7.0",
]
description = "A guardrailed multi-agent paper trading system built around local LLMs."
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
name = "agentic-trader"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.14.2"

[dependency-groups]
dev = [
  "coverage>=7.14.0",
  "iniconfig>=2.3.0",
  "isort>=6.0.1",
  "mypy>=2.1.0",
  "nodeenv>=1.10.0",
  "pandas-stubs>=3.0.0.260204",
  "pexpect>=4.9.0",
  "pip>=26.1.1",
  "pluggy>=1.6.0",
  "ptyprocess>=0.7.0",
  "pyinstaller>=6.20.0,<7.0.0",
  "pyright>=1.1.409",
  "pysonar>=1.6.0.4905,<2.0.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "python-semantic-release>=10.0.0,<11.0.0",
  "ruff>=0.15.14",
]

[project.scripts]
agentic-trader = "agentic_trader.cli:app"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov=agentic_trader --cov-report=term-missing --cov-report=json"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "tests/*",
  "*/__init__.py",
  ".ai/*",
  "runtime/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
extend-exclude = [
  "build",
  "dist",
  "runtime",
  ".ai/qa/artifacts",
  "docs",
  "sidecars",
  "webgui",
  "tui/node_modules",
]
line-length = 88
target-version = "py312"

[tool.semantic_release]
allow_zero_version = true
build_command = "uv build"
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
dist_path = "dist/"
major_on_zero = false
tag_format = "v{version}"
upload_to_vcs_release = true
version_toml = [
  "pyproject.toml:project.version",
  "sidecars/research_flow/pyproject.toml:project.version",
]
version_variables = [
  "agentic_trader/__init__.py:__version__",
  "package.json:version",
  "webgui/package.json:version",
  "docs/package.json:version",
  "tui/package.json:version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "[Vv][0-9]+"
prerelease = true
prerelease_token = "next"

[tool.semantic_release.branches.beta]
match = "^(?!main$|[Vv][0-9]+$).+"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
ignore_merge_commits = true
minor_tags = ["feat"]
parse_squash_commits = true
patch_tags = [
  "fix",
  "perf",
  "docs",
  "build",
  "ci",
  "chore",
  "refactor",
  "test",
  "style",
]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^chore\\(release\\):"]
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
