[project]
name = "research_flow"
version = "0.9.2"
description = "Tracked CrewAI research sidecar for Agentic Trader."
authors = [
    {name = "Oğuzcan Toptaş",email = "oguzcantoptas@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
kickoff = "research_flow.main:kickoff"
research-flow = "research_flow.main:kickoff"
research-flow-check = "research_flow.main:check"
research-flow-contract = "research_flow.contracts:contract_cli"
plot = "research_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
