[project]
authors = [
  {name = "Oğuzcan Toptaş", email = "oguzcantoptas@gmail.com"},
]
dependencies = [
  "crewai[tools]==1.15.1",
]
description = "Tracked CrewAI research sidecar for Agentic Trader."
license = "LGPL-3.0-or-later"
name = "research-flow"
requires-python = ">=3.13,<3.14"
version = "0.16.11"

[project.scripts]
kickoff = "research_flow.main:kickoff"
plot = "research_flow.main:plot"
research-flow = "research_flow.main:kickoff"
research-flow-check = "research_flow.main:check"
research-flow-contract = "research_flow.contracts:contract_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.crewai]
type = "flow"
